--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
-  instagram:
+  github: johnzavisa
+  instagram: 00.johnzavisa.00
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
