--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
-  instagram:
-  linkedin:
+  github: johnzavisa
+  instagram: 00.johnzavisa.00
+  linkedin: JohnZavisa
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: jekyllrb
