--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: johnzavisa
   instagram: 00.johnzavisa.00
-  linkedin: https://www.linkedin.com/in/john-zavisa-b4143713a/
+  linkedin: john-zavisa-b4143713a
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
