--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ avatar: https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/SNice.svg/1200
 #
 # Flags below are optional
 #
-
+background-image: url('/images/bgrnd2.png')
 
 # Includes an icon in the footer for each username you enter
 footer-links:
