--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: John Zavisa
 description: Web Developer from Tennessee
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/avatarmanTri.png
+avatar: /images/avatarTri.png
 
 #
 # Flags below are optional
