--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: John Zavisa
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Tennessee
+description: I'm a 21 year old software developer passionate about building projects that can make a lasting impact on the world. Student at Middle Tenessee State University.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/avatarTri.png
