--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: John Zavisa
 
 # Short bio or description (displayed in the header)
-description: 21 Year Old Software Developer from Tennessee
+description: Software Developer from Tennessee
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/avatarTri.png
